--- a/core/templates/parciais/_navbar.html
+++ b/core/templates/parciais/_navbar.html
@@ -44,7 +44,7 @@
             </li>
             <li class="nav-item dropdown">
 
-                <a class="nav-link" href="{% url 'usuario:criar' %}" id="navbarDropdown" role="button"
+                <a class="nav-link" href="{% url 'usuario:atualizar' %}" id="navbarDropdown" role="button"
                     aria-haspopup="true" aria-expanded="false">
                     <img src="{% static 'imgs/cookit_user.svg' %}" alt="" height="25px">
                 </a>
