alterando: telas de cadastro, add javascript e id no css

--- a/core/templates/parciais/_head.html
+++ b/core/templates/parciais/_head.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" href="css/cadastro.css">
 
 <script scr="{% static 'custom/js/favoritos.js' %}"></script>
+<script scr="{% static 'custom/js/login_cadastro.js' %}"></script>
 
 <!--Jquery, Popper, Bootstrap JS e Font Awesome-->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
