corrigindo erro IDIOTA do src

--- a/core/templates/usuario/cadastro_nova.html
+++ b/core/templates/usuario/cadastro_nova.html
@@ -46,13 +46,9 @@
                         <div class="form-group">
                             <input name='password' type="password" class="form-control rounded-pill" id="exampleInputPassword1" placeholder="Senha:">
                         </div>
-                        
-                        <a href="javascript:cadastroOpen()">cadastro</a>
-                        <button type="submit" class="btn btn-primary btn-block btn-lg rounded-pill">
-                                Login
-                        </button>
+                        <a href="javascript:cadastroOpen()">Ainda não tem cadastro?</a>
+                        <button type="submit" class="btn btn-primary btn-block btn-lg rounded-pill">Login</button>
                     </form>
-                    <button  onclick="cadastroOpen()">Cadastro</button>
                 </div>
                 {% endif %}
                 <div class="col-lg mt-3" id="cadastro" style="
