removendo TODOS concluidos

--- a/core/templates/parciais/_conteudo_receita.html
+++ b/core/templates/parciais/_conteudo_receita.html
@@ -1,4 +1,4 @@
-{% comment %} <div id="receitas-tela-inicial" class="row">
+<div id="receitas-tela-inicial" class="row">
     <div class="col-sm">
         <div class="receita-tela-inicial">
             <a href="" class="row d-flex justify-content-between align-items-center">
@@ -56,4 +56,4 @@
             </button>
         </div>
     </div>
-</div> {% endcomment %}
+</div>
