--- a/core/templates/usuario/cadastro_nova.html
+++ b/core/templates/usuario/cadastro_nova.html
@@ -1,43 +1,57 @@
 {% load static %} {% load crispy_forms_tags %} {%include 'parciais/_head.html'%} {%include 'parciais/_messages.html'%}
 
-
-<body style="
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    ">
-    <div class="bg" style="
-    margin-top: -70px !important;
-    background-image: url({% static 'imgs/bosch_cookit.jpg' %}) ;
-    background-size: contain;
-    width: 100%;
+<style>
+    body {
+        width: 100%;
+        height: 100%;
+        position: fixed;
+    }
     
-    height: 100%;
-    ">
+    .bg {
+        margin-top: -70px !important;
+        background-size: contain;
+        width: 100%;
+        height: 100%;
+    }
+    
+    #login,
+    #cadastro {
+        background-color: white;
+        border-radius: 1em;
+        padding: 0 !important;
+        padding-bottom: 1em !important;
+    }
+    
+    h3 {
+        background-color: grey;
+        border-top-left-radius: 0.5em;
+        border-top-right-radius: 0.5em;
+        padding: 0.5em;
+    }
+    
+    #login form,
+    .crispy-form {
+        padding-left: 1em !important;
+        padding-right: 1em;
+    }
+    
+    #cadastro {
+        display: none;
+    }
+</style>
+
+<body>
+    <div class="bg" style="background-image: url({% static 'imgs/bosch_cookit.jpg' %});">
         <div class="container" style="background:none">
             <img class="rounded mx-auto d-block" src="{% static 'imgs/cookit_logo.svg' %}" alt="Logo" height="90px" style="margin: 1em;">
             <div class="row">
                 {% if not request.user.is_authenticated %}
-                <div class="col-lg mt-3" id="login" style="
-                background-color: white;
-                border-radius: 1em;
-                padding: 0 !important;
-                padding-bottom: 1em !important;
-                margin: 1em;
-            ">
-                    <h3 style="
-                background-color: grey;
-                border-top-left-radius: 0.5em;
-                border-top-right-radius: 0.5em;
-                padding: 0.5em;
-                ">Login</h3>
+                <div class="col-lg mt-3" id="login" style=" ">
+                    <h3 style="">Login</h3>
                     <div>
 
                     </div>
-                    <form method="POST" action="{% url 'usuario:login' %}" style="
-                    padding-left: 1em !important;
-                    padding-right: 1em;
-                ">
+                    <form method="POST" action="{% url 'usuario:login' %}">
                         <p>Se você já fez cadastro, basta entrar com seu usuário e senha abaixo:</p>
                         {% csrf_token %}
                         <div class="form-group">
@@ -51,30 +65,15 @@
                     </form>
                 </div>
                 {% endif %}
-                <div class="col-lg mt-3" id="cadastro" style="
-                background-color: white;
-                border-radius: 1em;
-                padding: 0 !important;
-                padding-bottom: 1em !important;
-                margin: 1em;
-                display:none;
-                ">
+                <div class="col-lg mt-3" id="cadastro">
 
                     <form method="POST" action="">
                         {% csrf_token %} {% if request.user.is_authenticated %}
 
                         <h3>Atualizar dados</h3>
                         {{ usuarioform|crispy }} {% else %}
-                        <h3 style="
-                    background-color: grey;
-                    border-top-left-radius: 0.5em;
-                    border-top-right-radius: 0.5em;
-                    padding: 0.5em;
-                    ">Cadastrar</h3>
-                        <div style="
-                    padding-left: 1em !important;
-                    padding-right: 1em;
-                ">
+                        <h3>Cadastrar</h3>
+                        <div class="crispy-form">
                             {{ usuarioform|crispy }} {% endif %}
 
                             <button type="submit" class="btn btn-primary btn-block btn-lg rounded-pill">
