--- a/core/templates/parciais/_navbar.html
+++ b/core/templates/parciais/_navbar.html
@@ -11,16 +11,18 @@
             </button>
         </div>
     </form>
+
+
     <div class="" id="navbarSupportedContent">
         <ul class="nav">
+            {% csrf_token %} {% if request.user.is_authenticated %}
             <li class="nav-item dropdown">
                 <a class="nav-link" href="#" role="button">
                     <h5><i style="font-size: 25px;" class="fas fa-book"></i></h5>
                 </a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <h5><i style="font-size: 25px;" class="fas fa-bell"></i></h5>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
@@ -31,8 +33,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <h5><i style="font-size: 25px;" class="fas fa-heart"></i></h5>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
@@ -44,8 +45,7 @@
             </li>
             <li class="nav-item dropdown">
 
-                <a class="nav-link" href="{% url 'usuario:criar' %}" id="navbarDropdown" role="button"
-                    aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link" href="{% url 'usuario:criar' %}" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                     <img src="{% static 'imgs/cookit_user.svg' %}" alt="" height="25px">
                 </a>
 
@@ -57,6 +57,18 @@
                 </div>
 
             </li>
+            <html>
+            {% else %}
+            <button id="login-button" class="btn btn-primary" onclick="location.href = '{% url 'usuario:criar' %}';loginOpen()">
+                    Login
+                </button>
+            <button id="cadastro-button" class="btn btn-secondary" onclick="location.href = '{% url 'usuario:criar' %}';cadastroOpen()">
+                    Cadastro
+                </button>
+
+            </html>
         </ul>
+
+        {% endif %}
     </div>
 </nav>
