Adição de detalhe na navbar e adição de favicon.

--- a/core/templates/parciais/_conteudo_receita.html
+++ b/core/templates/parciais/_conteudo_receita.html
@@ -18,17 +18,12 @@
             </a>
             <div class="prep-mode-tela-inicial row">
                 <p class="text-justify">
-                    <b>1.</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Suspendisse cursus laoreet viverra. Cras non purus porttitor, rutrum metus at, vehicula sem.
-                    Sed maximus vitae lacus ut molestie. Proin posuere hendrerit aliquam.
-                    Curabitur vel nibh sapien. Suspendisse potenti. Nullam suscipit vehicula fermentum.
+                    <b>1.</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse cursus laoreet viverra. Cras non purus porttitor, rutrum metus at, vehicula sem. Sed maximus vitae lacus ut molestie. Proin posuere hendrerit aliquam. Curabitur
+                    vel nibh sapien. Suspendisse potenti. Nullam suscipit vehicula fermentum.
                 </p>
                 <p class="text-justify">
-                    <b>2.</b> Phasellus non faucibus erat. Nunc pharetra rutrum volutpat. Suspendisse potenti.
-                    Maecenas porta, dui luctus cursus lacinia, libero lectus tristique risus, vitae maximus neque nisi
-                    sit amet elit.
-                    Nunc fringilla odio magna. Aliquam vel feugiat lorem, eu condimentum sem.
-                    Vestibulum ullamcorper tortor in erat dignissim vehicula.
+                    <b>2.</b> Phasellus non faucibus erat. Nunc pharetra rutrum volutpat. Suspendisse potenti. Maecenas porta, dui luctus cursus lacinia, libero lectus tristique risus, vitae maximus neque nisi sit amet elit. Nunc fringilla odio magna.
+                    Aliquam vel feugiat lorem, eu condimentum sem. Vestibulum ullamcorper tortor in erat dignissim vehicula.
                 </p>
             </div>
             <div class="row">
