--- a/core/templates/receita/receita-completa.html
+++ b/core/templates/receita/receita-completa.html
@@ -1,3 +1,5 @@
+<title>{{ ingrediente.nome_receita }} - CookIt!</title>
+
 {%include 'parciais/_head.html'%} {% include 'parciais/_navbar.html'%}
 <div class="container">
     <div id="receita-receita-completa">
