--- a/core/templates/usuario/cadastro_nova.html
+++ b/core/templates/usuario/cadastro_nova.html
@@ -1,5 +1,5 @@
 {% load static %} {% load crispy_forms_tags %} {%include 'parciais/_head.html'%} {%include 'parciais/_messages.html'%}
-
+<title>Login e Cadastro - CookIt</title>
 <style>
     body {
         width: 100%;
