--- a/core/templates/parciais/_navbar.html
+++ b/core/templates/parciais/_navbar.html
@@ -45,26 +45,25 @@
             </li>
             <li class="nav-item dropdown">
 
-                <a class="nav-link" href="{% url 'usuario:criar' %}" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <img src="{% static 'imgs/cookit_user.svg' %}" alt="" height="25px">
                 </a>
 
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="{% url 'usuario:criar' %}">Perfil</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="{% url 'usuario:logout' %}">Sair</a>
                 </div>
 
             </li>
             <html>
             {% else %}
             <button id="login-button" class="btn btn-primary" onclick="location.href = '{% url 'usuario:criar' %}';loginOpen()">
-                    Login
-                </button>
+                Login
+            </button>
             <button id="cadastro-button" class="btn btn-secondary" onclick="location.href = '{% url 'usuario:criar' %}';cadastroOpen()">
-                    Cadastro
-                </button>
+                Cadastro
+            </button>
 
             </html>
         </ul>
