--- a/core/templates/usuario/cadastro_nova.html
+++ b/core/templates/usuario/cadastro_nova.html
@@ -1,4 +1,4 @@
-{% load static %} {% load crispy_forms_tags %} {%include 'parciais/_head.html'%} {%include 'parciais/_messages.html'%}
+{% load static %} {% load crispy_forms_tags %} {%include 'parciais/_head.html'%}
 <title>Login e Cadastro - CookIt</title>
 <style>
     body {
@@ -93,20 +93,22 @@
 
                     <form id="login-form" method="POST" action="{% url 'usuario:login' %}">
                         {% csrf_token %}
+                        {%include 'parciais/_messages.html'%}
                         <div class="form-group">
                             <input type="text" name='username' class="form-control rounded-pill" id="InputUsuario1"
                                 aria-describedby="usuarioHelp" placeholder="Nome de Usuário">
                         </div>
                         <div class="form-group">
                             <input name='password' type="password" class="form-control rounded-pill"
-                                id="exampleInputPassword1" placeholder="Senha:">
+                                id="exampleInputPassword1" placeholder="Senha">
                         </div>
-                        <button type="submit" class="btn btn-primary btn-block btn-lg rounded-pill">Login</button>
+                        <button type="submit" class="btn btn-primary btn-block btn-lg rounded-pill">Entrar</button>
                     </form>
                     <form id="cadastro-form" method="POST" action="">
                         {% csrf_token %} {% if request.user.is_authenticated %}
 
                         <h3>Atualizar dados</h3>
+                        {%include 'parciais/_messages.html'%}
                         {{ usuarioform|crispy }} {% else %}
                         <div class="crispy-form">
                             {{ usuarioform|crispy }} {% endif %}
