inserindo tela de cadastro_receita em templates

--- a/core/templates/parciais/_head.html
+++ b/core/templates/parciais/_head.html
@@ -14,6 +14,7 @@
 <!--Organizar nome de classes CSS para não haver contradições entre outras páginas -->
 <link rel="stylesheet" href="{% static 'custom/css/style.css' %}">
 <link rel="stylesheet" href="css/cadastro.css">
+<link rel="stylesheet" href="css/editar_receita.css">
 <link rel="shortcut icon" type="image/png" href="{% static 'imgs/cookit_user.svg' %}" />
 
 <script src="{% static 'custom/js/favoritos.js' %}"></script>
