--- a/core/templates/receita/editar_receita.html
+++ b/core/templates/receita/editar_receita.html
@@ -1,14 +1,85 @@
-{% include 'parciais/_head.html' %}  
-{% include 'parciais/_navbar.html'%}
-{% load crispy_forms_tags %}
-      <div class="container">
+{% include 'parciais/_head.html' %} {% include 'parciais/_navbar.html'%} {% load crispy_forms_tags %}
+<title>Inserindo Sua Receita - CookIt</title>
+<div class="container">
+    <div class="container">
         <h3>Inserindo Sua Receita</h3>
         <form class="form">
-          {% csrf_token %}
+            {% csrf_token %}
 
-          {{ receita_form|crispy }} 
-          <button id="submit-button" type="submit" class="btn btn-primary btn-block rounded-pill">Postar</button>
+            <div class="form-group">
+                {{ receita_form.nome_receita|as_crispy_field }}
+            </div>
+            <div class="form-group">
+                {{ receita_form.fotos|as_crispy_field }}
+            </div>
+            <!--                <div class="form-group">
+                    <ul id="thumbnail-input-group" class="jumbotron d-flex justify-content-around p-0">
+                        <li class="form-control rounded-circle d-flex justify-content-center align-items-center" id="thumbnail-input">
+                            <a href="">
+                                <i class="fas fa-camera"></i>
+                            </a>
+                        </li>
+                        <li class="form-control rounded-circle d-flex justify-content-center align-items-center" id="thumbnail-input">
+                            <a href="">
+                                <i class="fas fa-camera"></i>
+                            </a>
+                        </li>
+                        <li class="form-control rounded-circle d-flex justify-content-center align-items-center" id="thumbnail-input">
+                            <a href="">
+                                <i class="fas fa-camera"></i>
+                            </a>
+                        </li>
+                        <li class="form-control rounded-circle d-flex justify-content-center align-items-center" id="thumbnail-input">
+                            <a href="">
+                                <i class="fas fa-camera"></i>
+                            </a>
+                        </li>
+                        <li class="form-control rounded-circle d-flex justify-content-center align-items-center" id="thumbnail-input">
+                            <a href="">
+                                <i class="fas fa-camera"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+-->
+            <div class="form-group row">
+                <div class="form-group col-sm">
+                    <input multiple id="input" type="text" class="form-control rounded-pill" placeholder="Ingredientes">
+                </div>
+                <div class="form-group col-sm">
+                    <input id="input" type="text" class="form-control rounded-pill" placeholder="Categorias">
+                </div>
+            </div>
+            <div id="prep" class="row">
+                <div id="prep-mode" class="form-group col-sm">
+                    <div class="jumbotron">
+                        <h4>Modo de Preparo</h4>
+
+                        {{ receita_form.modo_preparo|as_crispy_field }}
+                    </div>
+                </div>
+                <div id="general" class="form-group col-sm">
+                    <div class="jumbotron">
+                        <h4>Caracteristicas gerais</h4>
+                        {{ receita_form.sabor_receita|as_crispy_field }} {{ receita_form.porcoes|as_crispy_field }}
+                        <div class="row">
+                            <div class="col">
+                                {{ receita_form.tempo_preparo|as_crispy_field }}
+                            </div>
+                            <div class="col">
+                                {{ receita_form.tempo_unidade_medida|as_crispy_field }}
+                            </div>
+                        </div>
+                        {{ receita_form.dificuldade|as_crispy_field }}
+                        <textarea type="text" class="form-group form-control" placeholder="Observações adicionais"></textarea>
+                    </div>
+                </div>
+            </div>
+            <button id="submit-button" type="submit" class="btn btn-primary btn-block rounded-pill">Postar</button>
         </form>
-      </div>
-</body>
-</html>
+    </div>
+    <!--          {{ receita_form|crispy }}
+        <button id="submit-button" type="submit" class="btn btn-primary btn-block rounded-pill">Postar</button>-->
+    </body>
+
+    </html>
