--- a/core/templates/parciais/_navbar.html
+++ b/core/templates/parciais/_navbar.html
@@ -17,12 +17,13 @@
         <ul class="nav">
             {% csrf_token %} {% if request.user.is_authenticated %}
             <li class="nav-item dropdown">
-                <a class="nav-link" href="#" role="button">
+                <a class="nav-link" href="{% url 'receita:cadastrar_receita' %}" role="button">
                     <h5><i style="font-size: 25px;" class="fas fa-book"></i></h5>
                 </a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
                     <h5><i style="font-size: 25px;" class="fas fa-bell"></i></h5>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
@@ -33,7 +34,8 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
                     <h5><i style="font-size: 25px;" class="fas fa-heart"></i></h5>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
@@ -45,7 +47,8 @@
             </li>
             <li class="nav-item dropdown">
 
-                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
                     <img src="{% static 'imgs/cookit_user.svg' %}" alt="" height="25px">
                 </a>
 
@@ -58,10 +61,12 @@
             </li>
             <html>
             {% else %}
-            <button id="login-button" class="btn btn-primary" onclick="location.href = '{% url 'usuario:criar' %}';loginOpen()">
+            <button id="login-button" class="btn btn-primary"
+                onclick="location.href = '{% url 'usuario:criar' %}';loginOpen()">
                 Login
             </button>
-            <button id="cadastro-button" class="btn btn-secondary" onclick="location.href = '{% url 'usuario:criar' %}';cadastroOpen()">
+            <button id="cadastro-button" class="btn btn-secondary"
+                onclick="location.href = '{% url 'usuario:criar' %}';cadastroOpen()">
                 Cadastro
             </button>
 
