--- a/core/templates/receita/editar_receita.html
+++ b/core/templates/receita/editar_receita.html
@@ -3,14 +3,19 @@
 <div class="container">
     <div class="container">
         <h3>Inserindo Sua Receita</h3>
-        <form class="form">
+        <form class="form" enctype="multipart/form-data" method="POST" action="">
             {% csrf_token %}
-
+            {% include 'parciais/_messages.html' %}
             <div class="form-group">
-                {{ receita_form.nome_receita|as_crispy_field }}
+                {{ receitaform.nome_receita|as_crispy_field }}
+            </div>
+            <div class="form-group" style="display: flex;">
+                {{ ingredienteform.nome_ingrediente|as_crispy_field }}
+                {{ ingredienteform.unidadeMedida|as_crispy_field }}
+                {{ ingredienteform.quantidade|as_crispy_field }}
             </div>
             <div class="form-group">
-                {{ receita_form.fotos|as_crispy_field }}
+                {{ receitaform.fotos|as_crispy_field }}
             </div>
             <!--                <div class="form-group">
                     <ul id="thumbnail-input-group" class="jumbotron d-flex justify-content-around p-0">
@@ -42,36 +47,27 @@
                     </ul>
                 </div>
 -->
-            <div class="form-group row">
-                <div class="form-group col-sm">
-                    <input multiple id="input" type="text" class="form-control rounded-pill" placeholder="Ingredientes">
-                </div>
-                <div class="form-group col-sm">
-                    <input id="input" type="text" class="form-control rounded-pill" placeholder="Categorias">
-                </div>
-            </div>
             <div id="prep" class="row">
                 <div id="prep-mode" class="form-group col-sm">
                     <div class="jumbotron">
                         <h4>Modo de Preparo</h4>
 
-                        {{ receita_form.modo_preparo|as_crispy_field }}
+                        {{ receitaform.modo_preparo|as_crispy_field }}
                     </div>
                 </div>
                 <div id="general" class="form-group col-sm">
                     <div class="jumbotron">
                         <h4>Caracteristicas gerais</h4>
-                        {{ receita_form.sabor_receita|as_crispy_field }} {{ receita_form.porcoes|as_crispy_field }}
+                        {{ receitaform.sabor_receita|as_crispy_field }} {{ receitaform.porcoes|as_crispy_field }}
                         <div class="row">
                             <div class="col">
-                                {{ receita_form.tempo_preparo|as_crispy_field }}
+                                {{ receitaform.tempo_preparo|as_crispy_field }}
                             </div>
                             <div class="col">
-                                {{ receita_form.tempo_unidade_medida|as_crispy_field }}
+                                {{ receitaform.tempo_unidade_medida|as_crispy_field }}
                             </div>
                         </div>
-                        {{ receita_form.dificuldade|as_crispy_field }}
-                        <textarea type="text" class="form-group form-control" placeholder="Observações adicionais"></textarea>
+                        {{ receitaform.dificuldade|as_crispy_field }}
                     </div>
                 </div>
             </div>
