Busca simples de receita implementada

--- a/core/templates/receita/receita-completa.html
+++ b/core/templates/receita/receita-completa.html
@@ -21,7 +21,7 @@
                         {% if ingrediente.fotos %}
                         <!--TODO: ver uma formatação melhor para a imagem-->
                         <img class="receita-foto rounded-circle" style="max-width:800px"
-                            src="{{ ingrediente.fotos.url }}" alt="{{ ingrediente.nome_receita }}"></img>
+                            src="{{ ingrediente.fotos.url }}" alt="{{ ingrediente.nome_receita }}">
                         {% endif %}
                     </div>
                 </div>
