--- a/core/templates/parciais/_navbar.html
+++ b/core/templates/parciais/_navbar.html
@@ -3,9 +3,10 @@
     <a class="navbar-brand" href="{% url 'receita:index' %}">
         <img src="{% static 'imgs/cookit_logo.svg' %}" alt="Logo" height="36px">
     </a>
-    <form class="form-inline <!--mr-auto my-2 my-lg-0-->">
+    <form class="form-inline <!--mr-auto my-2 my-lg-0-->" method="GET" action="{% url 'receita:busca' %}">
         <div id="search" class="input-group">
-            <input id="search-input" class="form-control" type="search" placeholder="Search" aria-label="Search">
+            <input id="search-input" class="form-control" type="search" placeholder="Busque sua receita"
+                aria-label="Busca" name="termo">
             <button id="search-button" class="btn btn-success" type="submit">
                 <i class="fas fa-search"></i>
             </button>
