Corrigindo renderização de data na tela de receita completa

--- a/core/templates/receita/receita-completa.html
+++ b/core/templates/receita/receita-completa.html
@@ -88,7 +88,7 @@
                                 <div class="icon-text-receita-completa">
                                     <i class="far fa-calendar-alt"></i>
                                     <br>
-                                    <p>{{ingrediente.data_publicacao}}</p>
+                                    <p>{{ingrediente.data_publicacao|date}}</p>
                                 </div>
                             </div>
                         </div>
