Corrigindo erros de gramática com 'pluralize' na miniatura e adicionando filtro de porções.

--- a/core/templates/parciais/_sidebar.html
+++ b/core/templates/parciais/_sidebar.html
@@ -23,7 +23,7 @@
         <div id="intel">
             <div class="form-group">
                 <label class="input-group-text input-label-sidebar">Porções</label>
-                <input class="form-control" id="portions" type="number" min="1">
+                <input class="form-control" id="portions" type="number" min="1" name="porcoes">
             </div>
             <div class="form-group">
                 <label class="input-group-text input-label-sidebar">Tmp de prep</label>
