--- a/core/templates/receita/index.html
+++ b/core/templates/receita/index.html
@@ -20,7 +20,8 @@
                 <a href="{{ receita.slug }}">
                     <h5 class="card-title">{{ receita.nome_receita }}</h5>
                 </a>
-                <p class="card-text">Publicado por <a style="font-size: 10px;" href="">{{ receita.dono_receita }}</a>
+                <p class="card-text">Publicado por <a style="font-size: 12px;"
+                        href=""><strong>{{ receita.dono_receita }}</strong></a>
                 </p>
                 <p class="card-text">
                     <i class="fa fa-star"></i>
