--- a/core/templates/parciais/_sidebar.html
+++ b/core/templates/parciais/_sidebar.html
@@ -1,6 +1,6 @@
 <nav id="sidebar">
     <form method="GET" action="{% url 'receita:busca' %}">
-        <!-- deixar responsiva -->
+        <!-- remover ids -->
         <div id="order-by">
             <div class="form-group">
                 <label class="input-group-text input-label-sidebar">Ordenar:</label>
